# RJIT_chatbot

./: README.md  api.py  app.py  bot.py  chunk_simple.py  new_clean_rjit.md  pyproject.toml  requirements.txt
